manifests/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  template:
    metadata:
      annotations:
        configmap-hash: "20260401-disable-login-form"
    spec:
      containers:
      - name: grafana
